<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddEvent" >

    <!-- MAKE A CLICKABLE ICON FOR LIKE/DISLIKE -->

    <EditText
        android:id="@+id/eventNameWhat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:hint="@string/eventNameWhat"
        android:paddingLeft="20dip"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventLocationWhere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:hint="@string/evenLocationWhere"
        android:paddingLeft="20dip"
        android:textSize="20sp" />
        
    <EditText
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:hint="@string/eventDescription"
        android:paddingLeft="20dip"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setDateTimeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparentColor"
        android:text="@string/dateTimePicker"
        android:textSize="18sp" />



    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/uploadImage"
        android:textSize="18sp" />
    <!-- android:onClick="submitEvent"/> -->

    <Button
        android:id="@+id/submitEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:text="@string/submitEvent"
        android:textSize="18sp" />

</LinearLayout>