<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_launcher"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".EventsPage" >

<!--  MAKE A CLICKABLE ICON FOR LIKE/DISLIKE    -->

    <TextView
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="20dip"
        android:text="@string/eventName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="20dip"
        android:text="@string/eventLocation"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:paddingLeft="20dip"
        android:text="@string/eventTime"
        android:textSize="20sp"
        android:textStyle="bold" />
    
     <TextView
        android:id="@+id/eventDescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="right"
        android:gravity="right"
        android:paddingLeft="20dip"
        android:text="@string/eventDescription"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>